Fixed issue with ghost mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
 }
+html,
+body {
+  overflow-x: hidden;
+}
 
 .grid-container {
   display: grid;
